--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <link rel="shortcut icon" href="favicon.ico" />
 
   <link rel="stylesheet" href="css/style.css">
+
+  <script src="js/utils.js"></script>
   <script src="js/engine.js"></script>
+  <script src="js/tiles.js"></script>
   <script src="js/sketch.js"></script>
 </head>
 
