added particles texture

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="js/utils.js"></script>
   <script src="js/engine.js"></script>
   <script src="js/tiles.js"></script>
+  <script src="js/particles.js"></script>
   <script src="js/sketch.js"></script>
 </head>
 
