--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="description" content="Webpage description goes here" />
   <meta charset="utf-8">
-  <title>TITLE</title>
+  <title>Bauhaus time!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="author" content="Author Name" />
@@ -17,15 +17,35 @@
   <script src="js/tiles.js"></script>
   <script src="js/particles.js"></script>
   <script src="js/sketch.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172160259-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-172160259-1');
+  </script>
+
 </head>
 
 <body>
+  <div class="instructions">
+    <p class="pc">click on the painting to generate a new one</p>
+    <p class="mobile">tap on the painting to generate a new one</p>
+  </div>
+
   <div class="container">
     <canvas id="sketch" width="1000" height="1000">
     </canvas>
   </div>
 
-  <div class="footer"></div>
+  <div class="credits">
+    <a href="https://lorenzoros.si/">by Lorenzo Rossi</a>
+    <span id="download">download the image</span>
+    <a href="https://github.com/lorossi/random-mondrian">GitHub repo</a>
+  </div>
 </body>
 
 </html>
