fixes, added signature

--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
   <title>Bauhaus time!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="Author Name" />
+  <meta name="author" content="Lorenzo Rossi" />
   <link rel="shortcut icon" href="favicon.ico" />
 
+  <link rel="preload" href="/css/Bauhaus-Regular.ttf" as="font" crossorigin>
   <link rel="stylesheet" href="css/style.css">
-
-  <script src="js/utils.js"></script>
-  <script src="js/engine.js"></script>
-  <script src="js/tiles.js"></script>
-  <script src="js/particles.js"></script>
-  <script src="js/sketch.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172160259-1"></script>
@@ -26,7 +21,15 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-172160259-1');
+    console.clear();
   </script>
+
+  <script src="js/utils.js"></script>
+  <script src="js/engine.js"></script>
+  <script src="js/tiles.js"></script>
+  <script src="js/particles.js"></script>
+  <script src="js/signature.js"></script>
+  <script src="js/sketch.js"></script>
 
 </head>
 
