--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="js/tiles.js"></script>
   <script src="js/particles.js"></script>
   <script src="js/signature.js"></script>
+  <script src="js/colors.js"></script>
   <script src="js/sketch.js"></script>
 
 </head>
