--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="credits">
     <a href="https://lorenzoros.si/">by Lorenzo Rossi</a>
     <span id="download">download the image</span>
-    <a href="https://github.com/lorossi/">GitHub repo</a>
+    <a href="https://github.com/lorossi/bauhaus-time">GitHub repo</a>
   </div>
 </body>
 
